--- a/index.html
+++ b/index.html
@@ -3,24 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Rubik|Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    <nav>Nav</nav>
+    <nav><i class="fa fa-bars"></i></nav>
     
     <main>
       <header>
-        <h1>Headline</h1>
+        <h1>I'm Adam, <span class="web">web developer,</span><span class='solve'>problem solver.</span></h1>
       </header>
       <section class="bio">
-        <h2>Bio</h2>
+        <p>I live in upstate New York. 
+          I enjoy the outdoors, making stained glass, puzzles, and games. 
+          I've always had a passion for riddles and puzzles which led me to web development.
+          I thoroughly enjoy the process of identifying what is needed, determining the steps to get the desired result, and achieving the solution.  
+          I believe any problem can be solved with the right tools and seen from the proper perspective. I'd like to use my knowledge of HTML, JavaScript, jQuery, and CSS to solve your problems.
+          </p>
       </section>
       <section class="projects">
-        <h2>Projects</h2>
+        <h2>Recent projects</h2>
+        <a href="/quiz/index.html">
+        <h3>Quiz app</h3>
+        <img src="pics/desktopScreenShot.png" alt="screenshot of quiz app on a full size monitor"></a>
+        <p>An app that quizes the user. Gives the user one question at a time with multiple choice answers. Checks to make sure 
+          user has picked an answer before checking to see if the user is correct. Gives feedback about the correct answer once
+          an answer is submitted. The current question number as well as score is displayed to the user at all times. If the user
+          gets a question correct the background changes to a picture of stained glass, if the user gets a question wrong the background
+          is changed to an image of broken glass. At the end of the quiz the user is given the choice to start the quiz again.
+        </p>
       </section>
     </main>
 
-    <footer>Contact</footer>
+    <footer>
+      <a href="mailto:ajlanza@gmail.com" target="_top" class="email">ajlanza@gmail.com</a>
+      <a href="github.com/ajlanza" class="github">GitHub</a>
+    </footer>
 </body>
 </html>
