--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Rubik|Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRubik%7CUbuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>Document</title>
+    <title>Adam's Portfolio</title>
 </head>
 <body>
-    <nav><i class="fa fa-bars"></i></nav>
-    
+  <a id="aboutMe"></a>
+    <nav><i class="fa fa-bars"></i>
+    <div class="navMenu">
+      <ul>
+        <li><a href="#aboutMe">About me</a></li>
+        <li><a href="#projectLink">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+    </nav>
     <main>
       <header>
         <h1>I'm Adam, <span class="web">web developer,</span><span class='solve'>problem solver.</span></h1>
@@ -23,12 +31,14 @@
           I believe any problem can be solved with the right tools and seen from the proper perspective. I'd like to use my knowledge of HTML, JavaScript, jQuery, and CSS to solve your problems.
           </p>
       </section>
+      <a id="projectLink"></a>
       <section class="projects">
-        <h2>Recent projects</h2>
+        <h2>Projects:</h2>
         <a href="/quiz/index.html">
         <h3>Quiz app</h3>
-        <img src="pics/desktopScreenShot.png" alt="screenshot of quiz app on a full size monitor"></a>
-        <p>An app that quizes the user. Gives the user one question at a time with multiple choice answers. Checks to make sure 
+        <img src="pics/desktopScreenShot.png" alt="screenshot of quiz app on a full size monitor" class="bigScreen"></a>
+        <p>Developed with HTML, CSS, and jQuery.</p>
+        <p>An app that quizzes the user one question at a time. Multiple choice answers are given for each question. Checks to make sure 
           user has picked an answer before checking to see if the user is correct. Gives feedback about the correct answer once
           an answer is submitted. The current question number as well as score is displayed to the user at all times. If the user
           gets a question correct the background changes to a picture of stained glass, if the user gets a question wrong the background
@@ -37,9 +47,12 @@
       </section>
     </main>
 
-    <footer>
+    <footer id="contact">
       <a href="mailto:ajlanza@gmail.com" target="_top" class="email">ajlanza@gmail.com</a>
-      <a href="github.com/ajlanza" class="github">GitHub</a>
+      <a href="github.com/ajlanza" class="github"><img src="pics/GitHub-Mark-32px.png" alt="github logo" class="git"></a>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
