--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="/quiz/index.html">
         <h3>Quiz app</h3>
         <img src="pics/desktopScreenShot.png" alt="screenshot of quiz app on a full size monitor" class="bigScreen"></a>
-        <p>Developed with HTML, CSS, and jQuery.</p>
+        <p>Developed with HTML, CSS, and jQuery.</p><br>
         <p>An app that quizzes the user one question at a time. Multiple choice answers are given for each question. Checks to make sure 
           user has picked an answer before checking to see if the user is correct. Gives feedback about the correct answer once
           an answer is submitted. The current question number as well as score is displayed to the user at all times. If the user
