Added Get Out project

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
           is changed to an image of broken glass. At the end of the quiz the user is given the choice to start the quiz again.</p>
         <br><br>
         <p class="quizHide">See the code on <a href="https://github.com/ajlanza/quiz">GitHub</a></p>
+        <br> 
+
+        <a href="/getout/index.html">
+          <h3>Get Out app</h3>
+          <img src="pics/getOutDesktop.png" alt="screenshot of get out app on a full size monitor" class="bigGet"></a>
+          <br>
+          <a class="details">Additional details.</a>
+          <p class="quizHide">Developed with HTML, CSS, JavaScript, and jQuery.</p>
+          <br><br>
+          <p class="quizHide">An app that will show the user where an event is located. The user is asked for a city and then displays a list of events
+            for that city. The user can then click on an event and the app will show where the venue is on the map, display a 
+            background image of the band playing, and name the venue where the event is being held.</p>
+          <br><br>
+          <p class="quizHide">See the code on <a href="https://github.com/ajlanza/getout">GitHub</a></p>
       </section>
     </main>
 
