Fixed Get Out link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="quizHide">See the code on <a href="https://github.com/ajlanza/quiz">GitHub</a></p>
         <br> 
 
-        <a href="/getout/index.html">
+        <a href="/GetOut/index.html">
           <h3>Get Out app</h3>
           <img src="pics/getOutDesktop.png" alt="screenshot of get out app on a full size monitor" class="bigGet"></a>
           <br>
