added phone-triage project

--- a/index.html
+++ b/index.html
@@ -49,8 +49,23 @@
         <br><br>
         <p class="quizHide">See the code on <a href="https://github.com/ajlanza/quiz">GitHub</a></p>
         <br> 
+        
+        <a href="https://phone-triage.vercel.app/l">
+        <h3>Phone Triage</h3>
+        <img src="pics/fullscreenPhoneTriage.PNG" alt="screenshot of Phone Triage app on a full size monitor" class="bigScreen"></a>
+        <br>
+        <a class="details">Additional details.</a>
+        <p class="quizHide">Developed with HTML, CSS, JavaScript, React, Node, Express, and PostgresQL.</p>
+        <br><br>
+        <p class="quizHide">An app designed for users with malfunctioning phones. The site allows for users to browse through previous
+          problems and solutions. If they are unable to find a similar problem to theirs they can log in and post their particular problem.
+          A user can also request that a service technician meet them wherever they are to help them out.
+        </p>
+        <br><br>
+        <p class="quizHide">See the code on <a href="https://github.com/ajlanza/phone-triage">GitHub</a></p>
+        <br>
 
-        <a href="/getout/index.html">
+        <a href="/GetOut/index.html">
           <h3>Get Out app</h3>
           <img src="pics/getOutDesktop.png" alt="screenshot of get out app on a full size monitor" class="bigGet"></a>
           <br>
