--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </header>
       <section class="bio">
         <p>I live in upstate New York. 
-          I enjoy the outdoors, making stained glass, puzzles, and games. 
+          I enjoy the outdoors, puzzles, games, and making stained glass,. 
           I've always had a passion for riddles and puzzles which led me to web development.
           I thoroughly enjoy the process of identifying what is needed, determining the steps to get the desired result, and achieving the solution.  
           I believe any problem can be solved with the right tools and seen from the proper perspective. I'd like to use my knowledge of HTML, JavaScript, jQuery, and CSS to solve your problems.
@@ -34,23 +34,9 @@
       <a id="projectLink"></a>
       <section class="projects">
         <h2>Projects:</h2>
-        <a href="/quiz/index.html">
-        <h3>Quiz app</h3>
-        <img src="pics/mobileDesktop.png" alt="screenshot of quiz app on a full size monitor" class="bigScreen"></a>
-        <br>
-        <a class="details">Additional details.</a>
-        <p class="quizHide">Developed with HTML, CSS, and jQuery.</p>
-        <br><br>
-        <p class="quizHide">An app that quizzes the user one question at a time. Multiple choice answers are given for each question. Checks to make sure 
-          user has picked an answer before checking to see if the user is correct. Gives feedback about the correct answer once
-          an answer is submitted. The current question number as well as score is displayed to the user at all times. If the user
-          gets a question correct the background changes to a picture of stained glass, if the user gets a question wrong the background
-          is changed to an image of broken glass. At the end of the quiz the user is given the choice to start the quiz again.</p>
-        <br><br>
-        <p class="quizHide">See the code on <a href="https://github.com/ajlanza/quiz">GitHub</a></p>
-        <br> 
         
-        <a href="https://phone-triage.vercel.app/l">
+        
+        <a href="https://phone-triage.vercel.app/">
         <h3>Phone Triage</h3>
         <img src="pics/fullscreenPhoneTriage.PNG" alt="screenshot of Phone Triage app on a full size monitor" class="bigScreen"></a>
         <br>
@@ -65,19 +51,35 @@
         <p class="quizHide">See the code on <a href="https://github.com/ajlanza/phone-triage">GitHub</a></p>
         <br>
 
-        <a href="/GetOut/index.html">
-          <h3>Get Out app</h3>
-          <img src="pics/getOutDesktop.png" alt="screenshot of get out app on a full size monitor" class="bigGet"></a>
-          <br>
-          <a class="details">Additional details.</a>
-          <p class="quizHide">Developed with HTML, CSS, JavaScript, and jQuery.</p>
-          <br><br>
-          <p class="quizHide">An app that will show the user where an event is located. The user is asked for a city and then displays a list of events
-            for that city. The user can then click on an event and the app will show where the venue is on the map, display a 
-            background image of the band playing, and name the venue where the event is being held.</p>
-          <br><br>
-          <p class="quizHide">See the code on <a href="https://github.com/ajlanza/getout">GitHub</a></p>
-      </section>
+        <a href="https://get-out.vercel.app/">
+        <h3>Get Out app</h3>
+        <img src="pics/getOutDesktop.png" alt="screenshot of get out app on a full size monitor" class="bigGet"></a>
+        <br>
+        <a class="details">Additional details.</a>
+        <p class="quizHide">Developed with HTML, CSS, JavaScript, and jQuery.</p>
+        <br><br>
+        <p class="quizHide">An app that will show the user where an event is located. The user is asked for a city and then displays a list of events
+          for that city. The user can then click on an event and the app will show where the venue is on the map, display a 
+          background image of the band playing, and name the venue where the event is being held.</p>
+        <br><br>
+        <p class="quizHide">See the code on <a href="https://github.com/ajlanza/getout">GitHub</a></p>
+
+        <a href="/quiz/index.html">
+        <h3>Quiz app</h3>
+        <img src="pics/mobileDesktop.png" alt="screenshot of quiz app on a full size monitor" class="bigScreen"></a>
+        <br>
+        <a class="details">Additional details.</a>
+        <p class="quizHide">Developed with HTML, CSS, and jQuery.</p>
+        <br><br>
+        <p class="quizHide">An app that quizzes the user one question at a time. Multiple choice answers are given for each question. Checks to make sure 
+          user has picked an answer before checking to see if the user is correct. Gives feedback about the correct answer once
+          an answer is submitted. The current question number as well as score is displayed to the user at all times. If the user
+          gets a question correct the background changes to a picture of stained glass, if the user gets a question wrong the background
+          is changed to an image of broken glass. At the end of the quiz the user is given the choice to start the quiz again.</p>
+        <br><br>
+          <p class="quizHide">See the code on <a href="https://github.com/ajlanza/quiz">GitHub</a></p>
+          <br> 
+      </ection>
     </main>
 
     <footer id="contact" class="contact">
